# testcontainers-demo

./: .dockerignore  Dockerfile  Dockerfile.testkube  README.md  Taskfile.yml  kind-config.yaml  pyproject.toml  run.py  testkube-workflow.yaml
.github/workflows/: build-test-images.yml  ci-tests.yml  docker-publish.yml  kind-testkube.yml
client/: cli.py
dns_querier/: config.py  main.py  resolver.py  utils.py
k8s/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/overlays/dev/: ingress-patch.yaml  kustomization.yaml  replica-patch.yaml
testkube/: Dockerfile.testkube  testkube-test.yaml
tests/: test_dns_parser.py  test_dns_resolver.py  test_dns_utils.py  test_rate_limiting.py
