[tool.poetry]
name = "dns-querier"
version = "0.0.1"
description = "DNS Querier Flask application for querying DNS records and displaying them as JSON."
authors = ["Aditya Krishnakumar <me@beinagdityak.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
dnslib = "^0.9.26"
requests = "^2.32.3"
click = "^8.2.1"
gunicorn = "^23.0.0"
redis = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
testcontainers = "^4.10.0"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"